[package]
name = "utils"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
description = "Shared utilities for shielded pool state modules"

[lib]
crate-type = ["rlib"]

[dependencies]
hex = { workspace = true }

[lints]
workspace = true
